[package]
name = "atomic-counter-py"
version = "0.1.3"
edition = "2021"
publish = false

[lib]
name = "atomic_counter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
