[package]
name = "atomic_counter_py"
version = "0.1.4"
edition = "2021"
publish = false

[lib]
name = "atomic_counter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
atomic_counter = { path = "./rust", version = "*" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
