[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "atomic-counter"
authors = [{name = "Tim Paine"}]
description="Atomic Counters"
readme = "README.md"
version = "0.1.1"
requires-python = ">=3.7"
dependencies = [
  "python-dateutil",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
develop = [
  "check-manifest",
  "maturin",
  "pytest",
  "pytest-cov",
  "ruff",
  "twine",
  "wheel",
]

[project.urls]
repository = "https://github.com/timkpaine/atomic-counter"
homepage = "https://github.com/timkpaine/atomic-counter"

[tool.black]
color = true
line-length = 150
target-version = ['py310']
skip-string-normalization = true

[tool.check-manifest]
ignore = [
  ".bumpversion.cfg",  # not working
]

[tool.ruff]
line-length = 150

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'atomic_counter/tests'
