[build-system]
requires = [
  "maturin>=1.1,<2"
]
build-backend = "maturin"

[project]
name = "atomic-counter"
authors = [{name = "Tim Paine"}]
description="Atomic Counters"
readme = "README.md"
version = "0.1.3"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
develop = [
  "bump-my-version",
  "check-manifest",
  "maturin>=1.1,<2",
  "pytest",
  "pytest-cov",
  "ruff",
  "twine",
  "wheel",
]

[project.urls]
repository = "https://github.com/timkpaine/atomic-counter"
homepage = "https://github.com/timkpaine/atomic-counter"

[tool.bumpversion]
current_version = "0.1.3"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "atomic_counter/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'atomic_counter/tests'

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["atomic_counter"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
